# homelab

./: .env-example  .envrc  .gitignore  .pre-commit-config.yaml  .releaserc.json  404.html  Makefile  README.md  docker-compose.yaml  example.env  homelab.py  homelab.sh  index.html  mkdocs.yaml  mkdocs.yml  pyproject.toml  setup_ufw.sh  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yaml  release.yaml  tests.yaml
apps/: calibre-web.yaml  calibre.yaml  chat-gpt-next-web.yaml  chatgpt-in-slack.yaml  chromadb.yaml  duckdns.yaml  flaresolverr.yaml  gluetun.yaml  healthchecks.yaml  heimdall.yaml  homepage.yaml  jellyfin.yaml  libreoffice.yaml  nzbhydra.yaml  oauth.yaml  ollama.yaml  open-webui.yaml  overseerr.yaml  pihole.yaml  plex.yaml  portainer.yaml  postgres.yaml  profilarr.yaml  prowlarr.yaml  qbittorrent.yaml  radarr.yaml  readarr.yaml  sabnzbd.yaml  sftpgo.yaml  socket-proxy.yaml  sonarr.yaml  tautulli.yaml  technitium.yaml  transmission.yaml  umami.yaml  unpackerr.yaml
apps/archive/: nzbget.yaml  ombi.yaml
apps/homeassistant/: docker-compose.yaml
apps/traefik/: docker-compose.yaml
docs/: cli.md  config.md  example.env  index.md  media_center.md  migrations.md  requirements.txt  scripts.md  traefik.md
docs/applications/: archived.md  core.md  media.md  media_center.md  miscellaneous.md  traefik.md  utilities.md
docs/example-secrets/: admin_password.secret  cloudflare_api_key.secret  database_password.secret  google_oauth.secret
homelab/: __init__.py  __main__.py  _cli.py  _version.py
jdc/scripts/: ufw_rules_remove.sh
media-center/: docker-compose.yaml
media-center/calibre/: docker-compose.yaml
media-center/calibre-web/: docker-compose.yaml
media-center/heimdall/: docker-compose.yaml
media-center/nzbget/: docker-compose.yaml
media-center/ombi/: docker-compose.yaml
media-center/plex/: docker-compose.yaml
media-center/portainer/: docker-compose.yaml
media-center/prowlarr/: docker-compose.yaml
media-center/radarr/: docker-compose.yaml
media-center/readarr/: docker-compose.yaml
media-center/sftpgo/: docker-compose.yaml
media-center/sonarr/: docker-compose.yaml
media-center/tautulli/: docker-compose.yaml
miscellaneous/: docker-compose.yaml
scripts/: backup.sh  check_vpn.sh  create-databases.sh  initialise-traefik-acme.sh
search/: search_index.json
stacks/archive/: nzbget.yaml
superset/: docker-compose.yaml
tests/: __init__.py  test_cli.py
traefik/: docker-compose.yaml
(+81 files in other folders)
