[project]
authors = [
  {name = "Justin Flannery", email = "juftin@juftin.com"}
]
description = "Homelab Deployment Via Docker-Compose"
license = "MIT"
name = "homelab"
readme = "README.md"

[tool.hatch.env]
requires = ["hatch-pip-compile", "hatch-mkdocs"]

[tool.hatch.env.collectors.mkdocs.docs]
path = "mkdocs.yaml"

[tool.hatch.envs.docs]
detached = true
type = "pip-compile"
lock-filename = "docs/requirements.txt"
