[project]
authors = [
  {name = "Justin Flannery", email = "juftin@juftin.com"}
]
description = "Homelab Deployment Via Docker-Compose"
license = "MIT"
name = "homelab"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.0.0"

[dependency-groups]
dev = [
  "markdown-exec",
  "mkdocs",
  "mkdocs-callouts",
  "mkdocs-material",
  "mkdocs-section-index",
  "pymdown-extensions"
]
